--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>iFruit</title>
+		<link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 		<script type="module" src="js/pages.js"></script>
 		<link rel="stylesheet" href="css/style.css">
 		<script src="GTA-Online-Weather/gtatime.js"></script>
