--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>iFruit</title>
+		<link rel="stylesheet" href="remix_icons/remixicon.css">
 		<link rel="stylesheet" href="css/style.css">
 		<script src="GTA-Online-Weather/gtatime.js"></script>
 		<script src="js/page_manager.js"></script>
